[package]
name = "pvce"
version = "0.1.0"
edition = "2021"

[dependencies]
k256 = { version = "0.13", features = ["arithmetic"] }
sha2 = "0.10"
hkdf = "0.12"
bitcoin = { version = "0.32", features = ["rand-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
hex = "0.4"
anyhow = "1"
